--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     }
     header h1 {
       margin: 0;
+      font-weight: 700;
+      font-size: 2.5rem;
+      letter-spacing: 2px;
+    }
+    header p {
+      margin: 0.5rem 0 0 0;
+      font-style: italic;
+      font-size: 1.1rem;
     }
     .container {
       padding: 2rem;
@@ -50,12 +58,29 @@
       text-decoration: none;
       border-radius: 5px;
       font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+    .whatsapp-button:hover {
+      background-color: #128c45;
     }
     footer {
       text-align: center;
       padding: 1rem;
       background: #eee;
-      font-size: 0.8rem;
+      font-size: 0.9rem;
+      color: #333;
+      position: relative;
+    }
+    footer a {
+      color: #25D366;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+    .footer-contact {
+      margin-top: 0.5rem;
     }
   </style>
 </head>
@@ -69,24 +94,25 @@
     <div class="product">
       <h3>Fried Sardines - Small Pack</h3>
       <p>Perfect for a snack. Approx. 100g.</p>
-      <a class="whatsapp-button" href="https://wa.me/YOURNUMBER?text=I'm%20interested%20in%20the%20Small%20Pack%20of%20Fried%20Sardines">Order on WhatsApp</a>
+      <a class="whatsapp-button" href="https://wa.me/255766570257?text=I'm%20interested%20in%20the%20Small%20Pack%20of%20Fried%20Sardines" target="_blank" rel="noopener noreferrer">Order on WhatsApp</a>
     </div>
 
     <div class="product">
       <h3>Fried Sardines - Medium Pack</h3>
       <p>Great for lunch or dinner. Approx. 250g.</p>
-      <a class="whatsapp-button" href="https://wa.me/YOURNUMBER?text=I'm%20interested%20in%20the%20Medium%20Pack%20of%20Fried%20Sardines">Order on WhatsApp</a>
+      <a class="whatsapp-button" href="https://wa.me/255766570257?text=I'm%20interested%20in%20the%20Medium%20Pack%20of%20Fried%20Sardines" target="_blank" rel="noopener noreferrer">Order on WhatsApp</a>
     </div>
 
     <div class="product">
       <h3>Fried Sardines - Family Pack</h3>
       <p>Share with your family. Approx. 500g.</p>
-      <a class="whatsapp-button" href="https://wa.me/YOURNUMBER?text=I'm%20interested%20in%20the%20Family%20Pack%20of%20Fried%20Sardines">Order on WhatsApp</a>
+      <a class="whatsapp-button" href="https://wa.me/255766570257?text=I'm%20interested%20in%20the%20Family%20Pack%20of%20Fried%20Sardines" target="_blank" rel="noopener noreferrer">Order on WhatsApp</a>
     </div>
   </div>
 
   <footer>
-    &copy; 2025 Ziwani Bites. All rights reserved.
+    &copy; 2025 Ziwani Bites.<br />
+    Contact us on <a href="https://wa.me/255766570257" target="_blank" rel="noopener noreferrer">WhatsApp</a>
   </footer>
 </body>
 </html>
