--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       text-align: center;
       padding: 1.5rem 0;
     }
+    header img {
+      height: 80px;
+      margin-bottom: 10px;
+    }
     header h1 {
       margin: 0;
       font-weight: 700;
@@ -86,6 +90,7 @@
 </head>
 <body>
   <header>
+    <img src="logo.png" alt="Ziwani Bites Logo" />
     <h1>Ziwani Bites</h1>
     <p>Delicious Fried Sardines – Crispy & Ready to Enjoy</p>
   </header>
