--- a/index.html
+++ b/index.html
@@ -2,98 +2,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ziwani Bites</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            background: #f9f9f9;
-            color: #333;
-        }
-        header {
-            background: #004d40;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        header img {
-            width: 100px;
-        }
-        .container {
-            padding: 20px;
-            max-width: 900px;
-            margin: auto;
-        }
-        .product {
-            background: white;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .section-title {
-            margin-top: 40px;
-            font-size: 1.5em;
-            border-bottom: 2px solid #004d40;
-            padding-bottom: 5px;
-        }
-        .whatsapp {
-            display: block;
-            background: #25D366;
-            color: white;
-            padding: 10px 15px;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 5px;
-            margin: 15px 0;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #004d40;
-            color: white;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ziwani Bites</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f1f1f1;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #004d40;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+    }
+    header img {
+      width: 120px;
+      margin-bottom: 10px;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+    .section-title {
+      font-size: 1.8em;
+      border-bottom: 3px solid #004d40;
+      margin-top: 40px;
+      padding-bottom: 8px;
+      color: #004d40;
+    }
+    .box {
+      background: #ffffff;
+      margin-top: 15px;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .whatsapp {
+      background-color: #25D366;
+      color: white;
+      display: inline-block;
+      text-align: center;
+      padding: 12px 20px;
+      margin-top: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+    }
+    footer {
+      background: #004d40;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 50px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="Ziwani Bites Logo">
-        <h1>Welcome to Ziwani Bites</h1>
-        <p>Delicious Fried Sardines</p>
-    </header>
-    <div class="container">
-        <div class="section-title">Our Products</div>
-        <div class="product"><h3>Small Pack (100g)</h3><p>Perfect for a quick bite or snack on the go.</p></div>
-        <div class="product"><h3>Medium Pack (250g)</h3><p>Ideal for lunch or sharing with a friend.</p></div>
-        <div class="product"><h3>Family Pack (500g)</h3><p>Enough for the whole family to enjoy!</p></div>
+  <header>
+    <img src="logo.png" alt="Ziwani Bites Logo">
+    <h1>Welcome to Ziwani Bites</h1>
+    <p>Delicious Fried Sardines for Every Occasion</p>
+  </header>
 
-        <div class="section-title">Testimonials</div>
-        <div class="product"><p>"The sardines are so crispy and tasty!" — Neema J.</p></div>
-        <div class="product"><p>"Ziwani Bites changed the way I snack." — Joseph M.</p></div>
-
-        <div class="section-title">Why Choose Us</div>
-        <div class="product">
-            <ul>
-                <li>Freshly sourced ingredients</li>
-                <li>Locally made with care</li>
-                <li>Affordable and tasty</li>
-            </ul>
-        </div>
-
-        <div class="section-title">FAQ</div>
-        <div class="product"><strong>Q: Where are you located?</strong><br>A: Dar es Salaam, Tanzania.</div>
-        <div class="product"><strong>Q: Do you deliver?</strong><br>A: Yes, we offer local delivery services.</div>
-
-        <a class="whatsapp" href="https://wa.me/255766570257" target="_blank">Order Now via WhatsApp</a>
-
-        <div class="section-title">Ready to Taste the Best?</div>
-        <p>Don't wait! Click below to order your Ziwani Bites now.</p>
-        <a class="whatsapp" href="https://wa.me/255766570257" target="_blank">Chat with Us on WhatsApp</a>
+  <div class="container">
+    <div class="section-title">Our Products</div>
+    <div class="box">
+      <h3>Small Pack (100g)</h3>
+      <p>Perfect for a quick bite or snack on the go.</p>
     </div>
-    <footer>&copy; 2025 Ziwani Bites. All rights reserved.</footer>
+    <div class="box">
+      <h3>Medium Pack (250g)</h3>
+      <p>Ideal for lunch or sharing with a friend.</p>
+    </div>
+    <div class="box">
+      <h3>Family Pack (500g)</h3>
+      <p>Enough for the whole family to enjoy!</p>
+    </div>
+
+    <div class="section-title">Why Choose Us</div>
+    <div class="box">
+      <ul>
+        <li>Freshly sourced ingredients</li>
+        <li>Locally made with care</li>
+        <li>Affordable and tasty</li>
+      </ul>
+    </div>
+
+    <div class="section-title">FAQ</div>
+    <div class="box"><strong>Q: Where are you located?</strong><br>A: Dar es Salaam, Tanzania.</div>
+    <div class="box"><strong>Q: Do you deliver?</strong><br>A: Yes, we offer local delivery services.</div>
+
+    <a class="whatsapp" href="https://wa.me/255766570257" target="_blank">Order Now via WhatsApp</a>
+
+    <div class="section-title">Ready to Taste the Best?</div>
+    <p>Don't wait! Click below to order your Ziwani Bites now.</p>
+    <a class="whatsapp" href="https://wa.me/255766570257" target="_blank">Chat with Us on WhatsApp</a>
+  </div>
+
+  <footer>
+    &copy; 2025 Ziwani Bites. All rights reserved.
+  </footer>
 </body>
 </html>
