--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
+    .order-button {
+      display: inline-block;
+      margin-top: 10px;
+      background-color: #25D366;
+      color: white;
+      padding: 10px 16px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 5px;
+    }
     .whatsapp {
       background-color: #25D366;
       color: white;
@@ -73,14 +83,17 @@
     <div class="box">
       <h3>Small Pack (100g)</h3>
       <p>Perfect for a quick bite or snack on the go.</p>
+      <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20100g%20Ziwani%20Bites%20pack" target="_blank">Order 100g via WhatsApp</a>
     </div>
     <div class="box">
       <h3>Medium Pack (250g)</h3>
       <p>Ideal for lunch or sharing with a friend.</p>
+      <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20250g%20Ziwani%20Bites%20pack" target="_blank">Order 250g via WhatsApp</a>
     </div>
     <div class="box">
       <h3>Family Pack (500g)</h3>
       <p>Enough for the whole family to enjoy!</p>
+      <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20500g%20Ziwani%20Bites%20pack" target="_blank">Order 500g via WhatsApp</a>
     </div>
 
     <div class="section-title">Why Choose Us</div>
@@ -95,8 +108,6 @@
     <div class="section-title">FAQ</div>
     <div class="box"><strong>Q: Where are you located?</strong><br>A: Dar es Salaam, Tanzania.</div>
     <div class="box"><strong>Q: Do you deliver?</strong><br>A: Yes, we offer local delivery services.</div>
-
-    <a class="whatsapp" href="https://wa.me/255766570257" target="_blank">Order Now via WhatsApp</a>
 
     <div class="section-title">Ready to Taste the Best?</div>
     <p>Don't wait! Click below to order your Ziwani Bites now.</p>
