--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
   <div class="container">
     <div class="section-title">Our Products</div>
     <div class="box">
-      <h3>Small Pack (100g)</h3>
+      <h3>Small Pack (100g) - TSh 2,000</h3>
       <p>Perfect for a quick bite or snack on the go.</p>
       <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20100g%20Ziwani%20Bites%20pack" target="_blank">Order 100g via WhatsApp</a>
     </div>
     <div class="box">
-      <h3>Medium Pack (250g)</h3>
+      <h3>Medium Pack (250g) - TSh 4,500</h3>
       <p>Ideal for lunch or sharing with a friend.</p>
       <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20250g%20Ziwani%20Bites%20pack" target="_blank">Order 250g via WhatsApp</a>
     </div>
     <div class="box">
-      <h3>Family Pack (500g)</h3>
+      <h3>Family Pack (500g) - TSh 8,000</h3>
       <p>Enough for the whole family to enjoy!</p>
       <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20500g%20Ziwani%20Bites%20pack" target="_blank">Order 500g via WhatsApp</a>
     </div>
