--- a/index.html
+++ b/index.html
@@ -2,99 +2,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ziwani Bites</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f9f9f9;
-            text-align: center;
-            padding: 20px;
-        }
-        header {
-            margin-bottom: 30px;
-        }
-        img {
-            max-width: 120px;
-        }
-        h1 {
-            margin: 10px 0 5px;
-        }
-        p.tagline {
-            color: #777;
-            font-style: italic;
-        }
-        .product {
-            margin: 15px auto;
-            padding: 10px;
-            background: white;
-            border-radius: 10px;
-            width: 90%;
-            max-width: 400px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .product label {
-            display: block;
-            margin: 10px 0 5px;
-        }
-        .product input {
-            width: 60px;
-            padding: 5px;
-            text-align: center;
-        }
-        button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 16px;
-            background: #25d366;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #1ebe5d;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ziwani Bites</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #00695c;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+    }
+    header img {
+      width: 120px;
+      margin-bottom: 10px;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+    .section-title {
+      font-size: 1.8em;
+      border-bottom: 3px solid #00695c;
+      margin-top: 40px;
+      padding-bottom: 8px;
+      color: #00695c;
+    }
+    .box {
+      background: white;
+      margin-top: 15px;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .order-button {
+      display: inline-block;
+      margin-top: 10px;
+      background-color: #25D366;
+      color: white;
+      padding: 10px 16px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 5px;
+    }
+    .whatsapp {
+      background-color: #25D366;
+      color: white;
+      display: inline-block;
+      text-align: center;
+      padding: 12px 20px;
+      margin-top: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+    }
+    footer {
+      background: #004d40;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 50px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="Ziwani Bites Logo">
-        <h1>Ziwani Bites</h1>
-        <p class="tagline">Just Bitting</p>
-    </header>
+  <header>
+    <img src="logo.png" alt="Ziwani Bites Logo">
+    <h1>Welcome to Ziwani Bites</h1>
+    <p>Delicious Fried Sardines for Every Occasion</p>
+  </header>
 
-    <div class="product">
-        <label for="qty100">Small Pack (100g)</label>
-        <input type="number" id="qty100" min="0" value="0">
+  <div class="container">
+    <div class="section-title">Our Products</div>
+    <div class="box">
+      <h3>Small Pack (100g) - TSh 2,000</h3>
+      <p>Perfect for a quick bite or snack on the go.</p>
+      <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20100g%20Ziwani%20Bites%20pack" target="_blank">Order 100g via WhatsApp</a>
     </div>
-    <div class="product">
-        <label for="qty250">Medium Pack (250g)</label>
-        <input type="number" id="qty250" min="0" value="0">
+    <div class="box">
+      <h3>Medium Pack (250g) - TSh 4,500</h3>
+      <p>Ideal for lunch or sharing with a friend.</p>
+      <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20250g%20Ziwani%20Bites%20pack" target="_blank">Order 250g via WhatsApp</a>
     </div>
-    <div class="product">
-        <label for="qty500">Family Pack (500g)</label>
-        <input type="number" id="qty500" min="0" value="0">
+    <div class="box">
+      <h3>Family Pack (500g) - TSh 8,000</h3>
+      <p>Enough for the whole family to enjoy!</p>
+      <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20500g%20Ziwani%20Bites%20pack" target="_blank">Order 500g via WhatsApp</a>
     </div>
 
-    <button onclick="sendOrder()">Add to WhatsApp</button>
+    <div class="section-title">Why Choose Us</div>
+    <div class="box">
+      <ul>
+        <li>Freshly sourced ingredients</li>
+        <li>Locally made with care</li>
+        <li>Affordable and tasty</li>
+      </ul>
+    </div>
 
-    <script>
-        function sendOrder() {
-            const qty100 = parseInt(document.getElementById('qty100').value) || 0;
-            const qty250 = parseInt(document.getElementById('qty250').value) || 0;
-            const qty500 = parseInt(document.getElementById('qty500').value) || 0;
+    <div class="section-title">FAQ</div>
+    <div class="box"><strong>Q: Where are you located?</strong><br>A: Dar es Salaam, Tanzania.</div>
+    <div class="box"><strong>Q: Do you deliver?</strong><br>A: Yes, we offer local delivery services.</div>
 
-            let message = 'Hi Ziwani Bites!%0A%0AI'd like to order:';
-            if (qty100 > 0) message += `%0A- ${qty100} x Small Pack (100g)`;
-            if (qty250 > 0) message += `%0A- ${qty250} x Medium Pack (250g)`;
-            if (qty500 > 0) message += `%0A- ${qty500} x Family Pack (500g)`;
-            message += `%0A%0ANo payment is processed on the site — I confirm payment manually via WhatsApp chat.`;
+    <div class="section-title">Ready to Taste the Best?</div>
+    <p>Don't wait! Click below to order your Ziwani Bites now.</p>
+    <a class="whatsapp" href="https://wa.me/255766570257" target="_blank">Chat with Us on WhatsApp</a>
+  </div>
 
-            const whatsappURL = `https://wa.me/255766570257?text=${message}`;
-            window.open(whatsappURL, '_blank');
-        }
-    </script>
+  <footer>
+    &copy; 2025 Ziwani Bites. All rights reserved.
+  </footer>
 </body>
 </html>
