--- a/index.html
+++ b/index.html
@@ -2,62 +2,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ziwani Bites</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-        img { max-width: 150px; }
-        .tagline { font-style: italic; color: #777; margin-bottom: 30px; }
-        .product { margin-bottom: 15px; }
-        select { font-size: 16px; padding: 5px; }
-        button { margin-top: 20px; font-size: 16px; padding: 10px 20px; background-color: #25D366; color: white; border: none; cursor: pointer; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ziwani Bites</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #00695c;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+    }
+    header img {
+      width: 120px;
+      margin-bottom: 10px;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+    .section-title {
+      font-size: 1.8em;
+      border-bottom: 3px solid #00695c;
+      margin-top: 40px;
+      padding-bottom: 8px;
+      color: #00695c;
+    }
+    .box {
+      background: white;
+      margin-top: 15px;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .order-button {
+      display: inline-block;
+      margin-top: 10px;
+      background-color: #25D366;
+      color: white;
+      padding: 10px 16px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 5px;
+    }
+    .whatsapp {
+      background-color: #25D366;
+      color: white;
+      display: inline-block;
+      text-align: center;
+      padding: 12px 20px;
+      margin-top: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+    }
+    footer {
+      background: #004d40;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 50px;
+    }
+  </style>
 </head>
 <body>
+  <header>
     <img src="logo.png" alt="Ziwani Bites Logo">
-    <div class="tagline">Just Bitting</div>
+    <h1>Welcome to Ziwani Bites</h1>
+    <p>Delicious Fried Sardines for Every Occasion</p>
+  </header>
 
-    <div class="product">
-        <label>Small Pack (100g):</label>
-        <select id="small">
-            <option value="0">0</option>
-            <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option>
-        </select>
+  <div class="container">
+    <div class="section-title">Our Products</div>
+    <div class="box">
+      <h3>Small Pack (100g) - TSh 2,000</h3>
+      <p>Perfect for a quick bite or snack on the go.</p>
+      <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20100g%20Ziwani%20Bites%20pack" target="_blank">Order 100g via WhatsApp</a>
     </div>
-    <div class="product">
-        <label>Medium Pack (250g):</label>
-        <select id="medium">
-            <option value="0">0</option>
-            <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option>
-        </select>
+    <div class="box">
+      <h3>Medium Pack (250g) - TSh 4,500</h3>
+      <p>Ideal for lunch or sharing with a friend.</p>
+      <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20250g%20Ziwani%20Bites%20pack" target="_blank">Order 250g via WhatsApp</a>
     </div>
-    <div class="product">
-        <label>Family Pack (500g):</label>
-        <select id="family">
-            <option value="0">0</option>
-            <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option>
-        </select>
+    <div class="box">
+      <h3>Family Pack (500g) - TSh 8,000</h3>
+      <p>Enough for the whole family to enjoy!</p>
+      <a class="order-button" href="https://wa.me/255766570257?text=I%20would%20like%20to%20order%20the%20500g%20Ziwani%20Bites%20pack" target="_blank">Order 500g via WhatsApp</a>
     </div>
 
-    <button onclick="sendWhatsApp()">Add to WhatsApp</button>
+    <div class="section-title">Why Choose Us</div>
+    <div class="box">
+      <ul>
+        <li>Freshly sourced ingredients</li>
+        <li>Locally made with care</li>
+        <li>Affordable and tasty</li>
+      </ul>
+    </div>
 
-    <script>
-        function sendWhatsApp() {
-            const small = parseInt(document.getElementById('small').value);
-            const medium = parseInt(document.getElementById('medium').value);
-            const family = parseInt(document.getElementById('family').value);
+    <div class="section-title">FAQ</div>
+    <div class="box"><strong>Q: Where are you located?</strong><br>A: Dar es Salaam, Tanzania.</div>
+    <div class="box"><strong>Q: Do you deliver?</strong><br>A: Yes, we offer local delivery services.</div>
 
-            let message = 'Hi Ziwani Bites!%0AI\'d like to order:';
-            if (small > 0) message += `%0A- ${small} x Small Pack (100g)`;
-            if (medium > 0) message += `%0A- ${medium} x Medium Pack (250g)`;
-            if (family > 0) message += `%0A- ${family} x Family Pack (500g)`;
+    <div class="section-title">Ready to Taste the Best?</div>
+    <p>Don't wait! Click below to order your Ziwani Bites now.</p>
+    <a class="whatsapp" href="https://wa.me/255766570257" target="_blank">Chat with Us on WhatsApp</a>
+  </div>
 
-            message += `%0A⚙️ My WhatsApp number is +255766570257`;
-
-            const url = `https://wa.me/?text=${message}`;
-            window.open(url, '_blank');
-        }
-    </script>
+  <footer>
+    &copy; 2025 Ziwani Bites. All rights reserved.
+  </footer>
 </body>
 </html>
