--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Ziwani Bites Logo">
+    <img src="./logo.png" alt="Ziwani Bites Logo">
     <h1>Welcome to Ziwani Bites</h1>
     <p>Delicious Fried Sardines for Every Occasion</p>
   </header>
@@ -94,7 +94,17 @@
       <p>Perfect for a quick bite or snack on the go.</p>
       <label>Qty:
         <select class="qty-select">
-          <option value="1">1</option>
+          <option value="0">0</option>
+<option value="1">1</option>
+<option value="2">2</option>
+<option value="3">3</option>
+<option value="4">4</option>
+<option value="5">5</option>
+<option value="6">6</option>
+<option value="7">7</option>
+<option value="8">8</option>
+<option value="9">9</option>
+<option value="10">10</option>
           <option value="2">2</option>
           <option value="3">3</option>
           <option value="4">4</option>
@@ -114,7 +124,17 @@
       <p>Ideal for lunch or sharing with a friend.</p>
       <label>Qty:
         <select class="qty-select">
-          <option value="1">1</option>
+          <option value="0">0</option>
+<option value="1">1</option>
+<option value="2">2</option>
+<option value="3">3</option>
+<option value="4">4</option>
+<option value="5">5</option>
+<option value="6">6</option>
+<option value="7">7</option>
+<option value="8">8</option>
+<option value="9">9</option>
+<option value="10">10</option>
           <option value="2">2</option>
           <option value="3">3</option>
           <option value="4">4</option>
@@ -134,7 +154,17 @@
       <p>Enough for the whole family to enjoy!</p>
       <label>Qty:
         <select class="qty-select">
-          <option value="1">1</option>
+          <option value="0">0</option>
+<option value="1">1</option>
+<option value="2">2</option>
+<option value="3">3</option>
+<option value="4">4</option>
+<option value="5">5</option>
+<option value="6">6</option>
+<option value="7">7</option>
+<option value="8">8</option>
+<option value="9">9</option>
+<option value="10">10</option>
           <option value="2">2</option>
           <option value="3">3</option>
           <option value="4">4</option>
