--- a/index.html
+++ b/index.html
@@ -89,92 +89,29 @@
   <div class="container">
     <div class="section-title">Our Products</div>
 
-    <div class="box product" data-pack="Small Pack (100g)">
-      <h3>Small Pack (100g) - TSh 2,000</h3>
-      <p>Perfect for a quick bite or snack on the go.</p>
+    <div class="box product" data-pack="Small Pack (300g)">
+      <h3>Small Pack (300g) - TSh 3,000</h3>
+      <p>Affordable single portion — great for solo snacks.</p>
       <label>Qty:
-        <select class="qty-select">
-          <option value="0">0</option>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5">5</option>
-<option value="6">6</option>
-<option value="7">7</option>
-<option value="8">8</option>
-<option value="9">9</option>
-<option value="10">10</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          <option value="7">7</option>
-          <option value="8">8</option>
-          <option value="9">9</option>
-          <option value="10">10</option>
-        </select>
+        <select class="qty-select"><option value="0">0</option><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
       </label>
       <button class="order-button add-to-cart">Add to WhatsApp</button>
     </div>
 
-    <div class="box product" data-pack="Medium Pack (250g)">
-      <h3>Medium Pack (250g) - TSh 4,500</h3>
-      <p>Ideal for lunch or sharing with a friend.</p>
+    <div class="box product" data-pack="Middle Pack (750g)">
+      <h3>Middle Pack (750g) - TSh 5,000</h3>
+      <p>Perfect middle ground — ideal for two or small gatherings.</p>
       <label>Qty:
-        <select class="qty-select">
-          <option value="0">0</option>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5">5</option>
-<option value="6">6</option>
-<option value="7">7</option>
-<option value="8">8</option>
-<option value="9">9</option>
-<option value="10">10</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          <option value="7">7</option>
-          <option value="8">8</option>
-          <option value="9">9</option>
-          <option value="10">10</option>
-        </select>
+        <select class="qty-select"><option value="0">0</option><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
       </label>
       <button class="order-button add-to-cart">Add to WhatsApp</button>
     </div>
 
-    <div class="box product" data-pack="Family Pack (500g)">
-      <h3>Family Pack (500g) - TSh 8,000</h3>
-      <p>Enough for the whole family to enjoy!</p>
+    <div class="box product" data-pack="Family Pack (1,250g)">
+      <h3>Family Pack (1,250g) - TSh 8,000</h3>
+      <p>Best value — plenty to go around for the whole family.</p>
       <label>Qty:
-        <select class="qty-select">
-          <option value="0">0</option>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5">5</option>
-<option value="6">6</option>
-<option value="7">7</option>
-<option value="8">8</option>
-<option value="9">9</option>
-<option value="10">10</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          <option value="7">7</option>
-          <option value="8">8</option>
-          <option value="9">9</option>
-          <option value="10">10</option>
-        </select>
+        <select class="qty-select"><option value="0">0</option><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
       </label>
       <button class="order-button add-to-cart">Add to WhatsApp</button>
     </div>
