--- a/index.html
+++ b/index.html
@@ -1,169 +1,31 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ziwani Bites</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #00695c;
-      color: white;
-      padding: 30px 20px;
-      text-align: center;
-    }
-    header img {
-      width: 120px;
-      margin-bottom: 10px;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-    }
-    .section-title {
-      font-size: 1.8em;
-      border-bottom: 3px solid #00695c;
-      margin-top: 40px;
-      padding-bottom: 8px;
-      color: #00695c;
-    }
-    .box {
-      background: white;
-      margin-top: 15px;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    .order-button {
-      display: inline-block;
-      margin-top: 10px;
-      background-color: #25D366;
-      color: white;
-      padding: 10px 16px;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .whatsapp {
-      background-color: #25D366;
-      color: white;
-      display: inline-block;
-      text-align: center;
-      padding: 12px 20px;
-      margin-top: 25px;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 8px;
-    }
-    footer {
-      background: #004d40;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 50px;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-    select {
-      padding: 5px;
-      margin-right: 10px;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f7f7f7; color: #333; }
+    header { background-color: #00796b; color: white; padding: 2rem; text-align: center; }
+    h1 { margin: 0; font-size: 2.5rem; }
+    p { font-size: 1.2rem; margin-top: 0.5rem; }
+    main { padding: 2rem; text-align: center; }
+    footer { background: #eee; text-align: center; padding: 1rem; font-size: 0.9rem; }
   </style>
 </head>
 <body>
   <header>
-    <img src="./logo.png" alt="Ziwani Bites Logo">
-    <h1>Welcome to Ziwani Bites</h1>
-    <p>Delicious Fried Sardines for Every Occasion</p>
+    <h1>Ziwani Bites</h1>
+    <p>Fresh Fried Dagaa Delivered Daily 🐟</p>
   </header>
-
-  <div class="container">
-    <div class="section-title">Our Products</div>
-
-    <div class="box product" data-pack="Small Pack (300g)">
-      <h3>Small Pack (300g) - TSh 3,000</h3>
-      <p>Affordable single portion — great for solo snacks.</p>
-      <label>Qty:
-        <select class="qty-select"><option value="0">0</option><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
-      </label>
-      <button class="order-button add-to-cart">Add to WhatsApp</button>
-    </div>
-
-    <div class="box product" data-pack="Middle Pack (750g)">
-      <h3>Middle Pack (750g) - TSh 5,000</h3>
-      <p>Perfect middle ground — ideal for two or small gatherings.</p>
-      <label>Qty:
-        <select class="qty-select"><option value="0">0</option><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
-      </label>
-      <button class="order-button add-to-cart">Add to WhatsApp</button>
-    </div>
-
-    <div class="box product" data-pack="Family Pack (1,250g)">
-      <h3>Family Pack (1,250g) - TSh 8,000</h3>
-      <p>Best value — plenty to go around for the whole family.</p>
-      <label>Qty:
-        <select class="qty-select"><option value="0">0</option><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select>
-      </label>
-      <button class="order-button add-to-cart">Add to WhatsApp</button>
-    </div>
-
-    <div class="section-title">Why Choose Us</div>
-    <div class="box">
-      <ul>
-        <li>Freshly sourced ingredients</li>
-        <li>Locally made with care</li>
-        <li>Affordable and tasty</li>
-      </ul>
-    </div>
-
-    <div class="section-title">FAQ</div>
-    <div class="box"><strong>Q: Where are you located?</strong><br>A: Dar es Salaam, Tanzania.</div>
-    <div class="box"><strong>Q: Do you deliver?</strong><br>A: Yes, we offer local delivery services.</div>
-
-    <div class="section-title">Ready to Taste the Best?</div>
-    <p>Don't wait! Click below to order your Ziwani Bites now.</p>
-    <a class="whatsapp" href="https://wa.me/255766570257" target="_blank">Chat with Us on WhatsApp</a>
-  </div>
-
+  <main>
+    <h2>Welcome!</h2>
+    <p>This is the official site of Ziwani Bites.</p>
+    <p>Order via WhatsApp: <a href="https://wa.me/255766570257" target="_blank">Click Here</a></p>
+  </main>
   <footer>
     &copy; 2025 Ziwani Bites. All rights reserved.
   </footer>
-
-  <script>
-    const phone = '255766570257';
-    document.querySelectorAll('.add-to-cart').forEach(button => {
-      button.addEventListener('click', () => {
-        const products = document.querySelectorAll('.product');
-        let message = 'Hi Ziwani Bites!%0A%0AI’d like to order:%0A';
-        let hasItems = false;
-
-        products.forEach(prod => {
-          const name = prod.dataset.pack;
-          const qty = prod.querySelector('.qty-select').value;
-          if (qty > 0) {
-            message += `- ${qty} x ${encodeURIComponent(name)}%0A`;
-            hasItems = true;
-          }
-        });
-
-        if (!hasItems) {
-          alert('Please select at least one quantity.');
-          return;
-        }
-
-        const url = `https://wa.me/${phone}?text=${message}`;
-        window.open(url, '_blank');
-      });
-    });
-  </script>
 </body>
 </html>
